[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 
[project] 
name = "visionflow" 
version = "0.0.1" 
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
] 
requires-python = ">=3.11" 
authors = [ 
{name = "Mithra", email = "mithrabijumon@gmail.com"}, 
] 
readme = "README.md" 
