[build-system] 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 
[project] 
name = "visionflow" 
version = "0.0.1" 
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
] 
authors = [ 
{name = "Mithra", email = "mithrabijumon@gmail.com"}, 
] 
readme = "README.md" 
